<?xml version="1.0"?>
<package format="2">
  <name>rtabdumpster_description</name>
  <version>0.0.0</version>
  <description>The rtabdumpster_description package</description>

  <maintainer email="user@mail.com">agilex</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>